# chezz

./: LICENSE  README.md  docker-compose.yaml
client/: .prettierrc  index.html  package.json  tsconfig.json  vite.config.ts
client/src/: App.svelte  app.css  config.ts  wsHandler.ts
client/src/lib/: Board.svelte  board.ts  loadImage.ts  piece.ts
server/: Cargo.toml
server/src/: board.rs  handler.rs  main.rs  ws.rs
