[package]
name = "chezz-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.25", default-features = false }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.24.2", features = ["macros", "sync", "rt-multi-thread"] }
tokio-stream = "0.1.11"
uuid = { version = "1.2.2", features = ["serde", "v4"] }
warp = "0.3.3"
